# PolyTool

./: .claudeignore  .codex_tmp_artifacts_audit.sh  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  Dockerfile.bot  LICENSE  README.md  arb_config.json  arb_strategy.json  claude.md  docker-compose.yml  mcp_stderr.txt  polytool.example.yaml  polytool.yaml  pyproject.toml  pyrightconfig.json  requirements-rag.txt  users.txt  wf_detail.json
.claude/: gsd-file-manifest.json  settings.json  settings.local.json
.claude/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/gsd-local-patches/: backup-meta.json
.gemini/: gsd-file-manifest.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  sync-docs-to-drive.yml
.opencode/: gsd-file-manifest.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.sandboxtmp/: patch_probe.txt
.sandboxtmp/roadmap_v4_sync/: PLAN_OF_RECORD_HEAD.md
config/: benchmark_v1.audit.json  benchmark_v1.gap_report.json  benchmark_v1.lock.json  benchmark_v1.tape_manifest  benchmark_v1_gap_fill.insufficiency.json  benchmark_v1_gap_fill.targets.json  benchmark_v1_new_market_capture.targets.json  freshness_decay.json  recovery_corpus_v1.tape_manifest  research_eval_benchmark_v0_corpus.draft.json  research_eval_prompt.md  research_relevance_filter_v1.json  ris_eval_config.json  seed_manifest.json  seed_manifest_external_knowledge.json  watchlist_usernames.txt
docs/: ARCHITECTURE.md  ARCHITECT_CONTEXT_PACK.md  CURRENT_DEVELOPMENT.md  CURRENT_STATE.md  DASHBOARDS.md  DOCS_BEST_PRACTICES.md  GDRIVE_SYNC_TEST_2026-03-25.md  HYPOTHESIS_STANDARD.md  INDEX.md  KNOWLEDGE_BASE_CONVENTIONS.md  LLM_BUNDLE_WORKFLOW.md  LLM_RESEARCH_PACKETS.md  LOCAL_RAG_WORKFLOW.md  OPERATOR_QUICKSTART.md  OPERATOR_SETUP_GUIDE.md  OPUS_BUNDLE_WORKFLOW.md  PACKET_6_OPPORTUNITIES.md  PARTNER_DEPLOYMENT_GUIDE_docker.md  PLAN_OF_RECORD.md  PLAYS_VIEW.md  PROJECT_CONTEXT_PUBLIC.md  PROJECT_OVERVIEW.md  PROJECT_TREE_FULL.txt  QUALITY_CONFIDENCE.md  RAG_IMPLEMENTATION_REPORT.md  README.md  README_SIMTRADER.md  REPO_ARCHITECTURE.md  RESEARCH_SOURCES.md  REVERSE_ENGINEER_COPY_MAP.md  REVERSE_ENGINEER_SPEC.md  RISK_POLICY.md  RIS_AUDIT_REPORT.md  RIS_OPERATOR_GUIDE.md  ROADMAP.md  RUNBOOK_MANUAL_EXAMINE.md  STRATEGY_CATALOG.md  STRATEGY_PLAYBOOK.md  TODO.md  TROUBLESHOOTING_PNL.md  (+3 more)
docs/adr/: 0001-template.md  0002-private-kb-and-local-rag.md  0003-roadmap-renumbering.md  0004-clickhouse-host-defaults.md  0005-llm-bundle-rag-optional.md  0006-position-derived-classification.md  0007-fee-estimation-2pct-profit.md  0009-polymarket-category-taxonomy.md  0010-history-zero-position-count-fallback.md  0011-audit-default-all-positions.md  0013-ris-n8n-pilot-scoped.md  0014-public-docs-surface-and-repo-hygiene-boundaries.md  ADR-0001-cli-and-module-rename.md  ADR-0012-closing-price-definition.md
docs/archive/: CURRENT_STATE_HISTORY.md  DASHBOARDS.md  LLM_RESEARCH_PACKETS.md  MASTER_CONSTRUCTION_MANUAL_MAPPING.md  NEXT_STEPS_READINESS_REPORT.md  PACKET_6_OPPORTUNITIES.md  PLAYS_VIEW.md  PUBLIC_DATA_BLUEPRINT.md  STRATEGY_CATALOG.md  (+10 more)
kb/: README.md
polytool/: __init__.py  __main__.py
polyttool/: __init__.py  __main__.py
scripts/: docker-run.sh  docker-start.sh  smoke_ris_n8n.py  start_vera_discord_gateway.sh  studio_docker.ps1  studio_docker.sh  test_vera_dev_logs_commands.sh  test_vera_files_commands.sh  test_vera_status_commands.sh  vera_hermes_healthcheck.sh
tests/: _safe_cleanup.py  conftest.py  test_adverse_selection.py  test_agent_run.py  test_alpha_distill.py  test_audit_coverage.py  test_batch_run.py  test_batch_silver.py  test_batch_silver_gap_fill.py  test_benchmark_closure_operator.py  test_benchmark_gap_fill_planner.py  test_benchmark_manifest.py  test_bucketing.py  test_capture_new_market_tapes.py  test_capture_status.py  test_clickhouse_host_resolution.py  test_clob.py  test_clob_order_client.py  test_close_benchmark_v1.py  test_clv.py  test_corpus_audit.py  test_coverage_report.py  test_crypto_pair_accumulation_engine.py  test_crypto_pair_await_soak.py  test_crypto_pair_backtest.py  test_crypto_pair_clickhouse_sink.py  test_crypto_pair_clob_stream.py  test_crypto_pair_fair_value.py  test_crypto_pair_live_safety.py  test_crypto_pair_momentum.py  test_crypto_pair_paper_ledger.py  test_crypto_pair_reference_feed.py  test_crypto_pair_report.py  test_crypto_pair_review.py  test_crypto_pair_risk_controls.py  test_crypto_pair_run.py  test_crypto_pair_runner_events.py  test_crypto_pair_scan.py  test_crypto_pair_seed_demo_events.py  test_crypto_pair_soak_workflow.py  (+151 more)
(+1935 files in other folders)
